RESOLVED FIXED216830
[GTK] REGRESSION(r267398): several hidpi tests are failing
https://bugs.webkit.org/show_bug.cgi?id=216830
Summary [GTK] REGRESSION(r267398): several hidpi tests are failing
Diego Pino
Reported 2020-09-22 09:24:16 PDT
The following tests are failing after r267398: fast/hidpi/clip-text-in-hidpi.html [ Failure ] fast/hidpi/image-srcset-change-dynamically-from-js-2x.html [ Failure ] fast/hidpi/image-srcset-fraction-1.5x.html [ Failure ] fast/hidpi/image-srcset-fraction.html [ Failure ] fast/hidpi/image-srcset-invalid-inputs-except-one.html [ Failure ] fast/hidpi/image-srcset-simple-2x.html [ Failure ] fast/hidpi/image-srcset-simple-in-variable-2x.html [ Failure ] fast/hidpi/image-srcset-src-selection-2x.html [ Failure ] See: https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20(Tests)/r267406%20(15968)/results.html
Attachments
Patch (1.46 KB, patch)
2020-09-22 11:54 PDT, Lauro Moura
no flags
Diego Pino
Comment 1 2020-09-22 09:29:39 PDT
Also: fast/hidpi/image-set-gradient-multi.html [ ImageOnlyFailure ] fast/hidpi/image-set-gradient.html [ ImageOnlyFailure ]
Diego Pino
Comment 2 2020-09-22 10:23:35 PDT
These other tests also started failing in r267398: fast/dom/HTMLImageElement/sizes/image-sizes-2x.html [ Failure ] fast/dom/HTMLImageElement/sizes/image-sizes-js-change.html [ Failure ] fast/events/mouse-cursor-image-set.html [ Failure http/tests/loading/sizes/preload-image-sizes-2x.html [ Failure ]
Lauro Moura
Comment 3 2020-09-22 11:54:38 PDT
Adrian Perez
Comment 4 2020-09-22 11:57:25 PDT
Comment on attachment 409386 [details] Patch Thanks for submitting this… View in context: https://bugs.webkit.org/attachment.cgi?id=409386&action=review > Source/WebKit/UIProcess/WebPageProxy.cpp:-3758 > -#if USE(CAIRO) && !HAVE(CAIRO_SURFACE_SET_DEVICE_SCALE) Ouch, I feel silly for missing this in r267398 — I checked my shell history and it turns out that I grepped around for HAVE_CAIRO_SURFACE_SET_DEVICE_SCALE instead of just CAIRO_SURFACE_SET_DEVICE_SCALE 🤦️
EWS
Comment 5 2020-09-22 12:18:22 PDT
Committed r267431: <https://trac.webkit.org/changeset/267431> All reviewed patches have been landed. Closing bug and clearing flags on attachment 409386 [details].
Radar WebKit Bug Importer
Comment 6 2020-09-22 12:19:17 PDT
Note You need to log in before you can comment on or make changes to this bug.