[GTK] REGRESSION(r267398): several hidpi tests are failing https://bugs.webkit.org/show_bug.cgi?id=216830

Reviewed by Adrian Perez de Castro.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::setCustomDeviceScaleFactor): Remove check for removed define.


Canonical link: https://commits.webkit.org/229631@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267431 268f45cc-cd09-0410-ab3c-d52691b4dbfc